site/resources/styles/checker.css
/* ... */
input[type="checkbox"]:not(#display-bg-checker) {
	appearance: none;
}

input[type="checkbox"]:not(#display-bg-checker) {
	content: url("/resources/images/icons/icon_dropdown.svg");
	width: 1rem;
	height: 1rem;
	vertical-align: middle;
	transform: rotate(0deg);
	transition: transform 0.375s cubic-bezier(0, 0.5, 0.25, 1);
}

input[type="checkbox"]:not(#display-bg-checker):checked {
	content: url("/resources/images/icons/icon_dropdown.svg");
	width: 1rem;
	height: 1rem;
	vertical-align: middle;
	transform:  rotate(90deg);
	transition: transform 0.375s cubic-bezier(0, 0.5, 0.25, 1);
}

.dropdown .dropdown-content {
	overflow: hidden;
	height: 0;
	transition: height 0.375s cubic-bezier(0, 0.5, 0.25, 1);
	border-top: 1px solid var(--tone-colour,#FFFFFF);
	border-right: none;
	border-bottom: none;
	border-left: none;
	padding: 0;
	margin-bottom: 1rem;
}

.dropdown > input[name="collapse"]:checked ~ .dropdown-content {
	height: auto;
	transition: height 0.375s cubic-bezier(0, 0.5, 0.25, 1);
	overflow: scroll;
	border-top: 1px solid var(--tone-colour,#FFFFFF);
	border-right: 1px dashed var(--tone-colour,#FFFFFF);
	border-bottom: 1px dashed var(--tone-colour,#FFFFFF);
	border-left: 1px dashed var(--tone-colour,#FFFFFF);
	padding: 0.75rem;
	max-width: 100%;

}

@media screen and (max-width: var(--thin-width-screen)) {
	.dropdown > input[name="collapse"]:checked ~ .dropdown-content  {
		padding: 0.5rem;
	}
}

.dropdown > .dropdown-content > .dropdown-hider {
	display: none;
}

.dropdown > input[name="collapse"]:checked ~ .dropdown-content > .dropdown-hider {
	display: contents;
}

/* --- Special dropdowns --- */
.rightbox .dropdown-display-controls,
.sidenav-hamburger .dropdown-sidenav-hamburger {
	margin: 0.5rem;
}

.dropdown-display-controls .dropdown-content,
.dropdown-sidenav-hamburger > .dropdown-content {
	overflow: hidden;
	height: 0;
	transition: height 0.375s cubic-bezier(0, 0.5, 0.25, 1);
	border-top: none;
	border-right: none;
	border-bottom: none;
	border-left: none;
	padding-right: 0;
	padding-bottom: 0;
	padding-left: 0;
	padding-top: 0;
	margin-bottom: 0;
}

.dropdown-display-controls > input[name="collapse"]:checked ~ .dropdown-content,
.dropdown-sidenav-hamburger > input[name="collapse"]:checked ~ .dropdown-content {
	overflow: scroll;
	height: auto;
	transition: height 0.375s cubic-bezier(0, 0.5, 0.25, 1);
	padding: 0.75rem;
	border-top: 1px solid var(--tone-colour,#FFFFFF);
	border-right: 1px dashed var(--tone-colour,#FFFFFF);
	border-bottom: 1px dashed var(--tone-colour,#FFFFFF);
	border-left: 1px dashed var(--tone-colour,#FFFFFF);
}

.dropdown-display-controls .dropdown-content {
	max-height: 50vh;
}

.dropdown-display-controls input[type="checkbox"]:not(#display-bg-checker) ~ label.dropdown-label::before {
	content: "Show display controls"
}

.dropdown-display-controls input[type="checkbox"]:not(#display-bg-checker):checked ~ label.dropdown-label::before {
	content: "Hide display controls"
}

.dropdown-display-controls input[type="checkbox"]:not(#display-bg-checker) {
	appearance: none;
}

.sidenav-hamburger {
	z-index: 1;
	background-color: var(--sidebar-colour,#1C0023);
	position: sticky;
	top: 0;
	width: 100%;
	display: none;
}

.sidenav-hamburger .dropdown-sidenav-hamburger > input[type="checkbox"]:not(#display-bg-checker):checked ~ .dropdown-content {
	height: 50vh;
	max-height: 50vh;
}

@media screen and (max-width: var(--thin-width-screen)) {
	.sidenav-hamburger {
		display: inline-block;
	}
	.dropdown-display-controls > input[name="collapse"]:checked ~ .dropdown-content,
	.dropdown-sidenav-hamburger > input[name="collapse"]:checked ~ .dropdown-content {
		padding: 0.5rem;
	}
	.rightbox .dropdown-display-controls,
	.sidenav-hamburger .dropdown-sidenav-hamburger {
		margin: 0.25rem;
	}
	.dropdown-display-controls .dropdown-content {
		max-height: 30vh;
	}
}

.dropdown-sidenav-hamburger > input[type="checkbox"]:not(#display-bg-checker) ~ label.dropdown-label::before {
	content: "Show navigation"
}

.dropdown-sidenav-hamburger > input[type="checkbox"]:not(#display-bg-checker):checked ~ label.dropdown-label::before {
	content: "Hide navigation"
}

.dropdown-display-controls > .dropdown-content > .dropdown-hider,
.dropdown-sidenav-hamburger > .dropdown-content > .dropdown-hider {
	display: none;
}

.dropdown-display-controls > input[name="collapse"]:checked ~ .dropdown-content > .dropdown-hider,
.dropdown-sidenav-hamburger > input[name="collapse"]:checked ~ .dropdown-content > .dropdown-hider {
	display: contents;
}

/* --- Input --- */
button,
input[type="number"] {
	font-family: var(--main-font,atkinson-hyperlegible, sans-serif);
	font-size: 1.2rem;
	text-align: left;
	border: 1px solid var(--a-colour,#FF9EBC);
	color: var(--a-colour,#FF9EBC);
	text-decoration: none;
	background-color: transparent;
	line-height: 1.5;
}

button:hover {
	border: 1px solid var(--a-hover-colour,#FBD1FF);
	color: var(--a-hover-colour,#FBD1FF);
	text-decoration: underline dotted var(--a-hover-colour,#FBD1FF);
}

button:active {
	border: 1px solid var(--a-active-colour,#FFFFFF);
	color: var(--a-active-colour,#FFFFFF);
	text-decoration: underline dotted var(--a-hover-colour,#FBD1FF);
}

.rightbox button {
	font-size: 1rem;
}

.rightbox input[type="number"] {
	width: 4rem;
	font-size: 1rem;
}

input[type="radio"] {
	appearance: none;
	border-radius: 50%;
	width: 16px;
	height: 16px;
	border: 2px solid var(--a-colour,#FF9EBC);
	transition: 0.2s all linear;
	margin-right: 5px;
	position: relative;
	top: 4px;
}

input[type="radio"]:hover {
	border: 3px solid var(--a-hover-colour,#FBD1FF);
}

input[type="radio"]:active {
	border: 7px solid var(--a-active-colour,#FFFFFF);
}

input[type="radio"]:checked {
	border: 6px solid var(--a-colour,#FF9EBC);
}

/* --- Scrollbar --- */
* {
	scrollbar-color: var(--hr-colour,var(--text-colour,#FF417D)) transparent;
}

*::-webkit-scrollbar-track {
	background: transparent;
}
/* ... */

